templates/spd/css/template.css
/**
 * @author Design & Accessible Team ( Adam Cox  )
 * @package Joomla
 * @subpackage Template-Sussex-People-Development
 * @copyright Copyright (C) 2005 - 2008 Open Source Matters. All rights reserved.
 * @license GNU/GPL, see LICENSE.php
 * Joomla! is free software. This version may have been modified pursuant to the
 * GNU General Public License, and as distributed it includes or is derivative
 * of works licensed under the GNU General Public License or other free or open
 * source software licenses. See COPYRIGHT.php for copyright notices and
 * details.
 */

@import url('editor.css');

body
{
    background: #FFFFFF;
    color: #575759;
    font-family: Arial;
    font-size: 14px;
	line-height: 16px;
    padding: 0px;
    margin: 0px;
    width: 100%;
}

img
{
	border: 0 none;
}

h2
{
	margin-top: -5px;
}

.inner
{
	width: 880px;
	margin: 0 auto;
	height: 100%;
}

.left
{
	float: left;
}

.right
{
	float: right;
}

.hMenu
{
    text-align: justify;
    margin: 0 auto;
}

.filler 
{
    width: 100%;
    display: inline-block;
    height: 0px !important;
}

.spd-border-top
{
	background: url('../images/border-top.png');
	width: 100%;
	height: 4px;
}

.spd-border-bottom
{
	background: url('../images/border-bottom.png');
	width: 100%;
	height: 4px;
}

.readmore
{
	color: #40287B;
	font-weight: bold;
}

#header
{
	height: 140px;
}

#header .logo
{
	float: left;
	width: 284px;
	height: 97px;
	margin-top: 20px;
	background: url('../images/logo.png') no-repeat;
}

#header .right
{
	width: 275px;
	margin-top: 20px;
	color: #9B9C9E;
	font-size: 21px;
	text-align: right;
	font-family: 'garamondregular';
}

#header .right span
{
	color: #40287B;
}

#menu
{
	width: 100%;
	height: 40px;
}

#menu .inner
{
	height: 32px;
}

#menu .menu
{
	position: relative;
	width: 100%;
	height: 32px;
	padding: 0px;
	margin: 0px;
	color: #40287B;
}

#menu .menu li
{
	display: inline-block;
	height: 100%;
	font-size: 15px;
	line-height: 34px;
	margin: 0px;
	padding: 0px;
}

#menu .menu li.active
{
	font-weight: bold;	
}

#banner
{
	margin-top: 10px;
}

#banner .ribbon
{
	width: 896px;
	height: 40px;
	margin-left: -8px;
	font-family: 'garamondregular';
	text-align: center;
	color: #FFFFFF;
	line-height: 40px;
	font-size: 34px;
	background: url('../images/ribbon.png');
}

#content
{
	height: 518px;
	overflow: hidden;
	padding-top: 30px;
}

#content .content-left
{
	padding: 0px 30px;
	width: 480px;
	height: 100%;
	float: left;
	display: inline;
	background: url('../images/people.png') -10px 0px;
}

#content .blog-featured p
{
	width: 204px;
}

#content .blog-featured .items-row
{
	overflow: hidden;
}

#content .blog-featured .column-1
{
	float: left;
}

#content .blog-featured .column-2
{
	float: right;
}

#footer
{
	height: 20px;
	border-top: 2px solid #40287B;
	color: #9B9C9E;
	line-height: 20px;
}

